<resources>
    <string name="app_name">ShoeStore</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="Login_btn">Log in</string>
    <string name="SignUp_btn">Sign Up</string>
    <string name="or">or</string>
    <string name="Shoe_image">Shoe_image</string>

    <string name="welcome_text1">
        Hello,welcome to our shoe Store.
        We are the oldest app in the world.

    </string>

    <string name="welcome_text2">

        You can find anytype of shoes!
        We can help you if you want.

    </string>

    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="shoeList">Shoe_List</string>
    <string name="instruction1">If you want to select a shoe from our inventory, please click on it</string>
    <string name="instruction2">If you want to add a shoe that we do not have it, please click on plus btn</string>
    <string name="shoe_name_label">Shoe name</string>
    <string name="company_name_label">Company name</string>
    <string name="shoe_size_label">Shoe size</string>
    <string name="description_label">Description</string>
    <string name="save_button">save</string>
    <string name="cancel_button">Cancel</string>
</resources>
